# RobustMatting

./: CMakeLists.txt  CMakeLists.txt.original  README.md
src/robust_matting/: main.cpp  robust_matting.cpp  robust_matting.h
